logs/ks.lib.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ks'...
Listing './lib/python3.5/site-packages/ks/lib'...
Listing './lib/python3.5/site-packages/ks/lib/datetime'...
Listing './lib/python3.5/site-packages/ks/lib/mailtemplate'...
Compiling './lib/python3.5/site-packages/ks/lib/mailtemplate/mailtemplate.py'...
***   File "./lib/python3.5/site-packages/ks/lib/mailtemplate/mailtemplate.py", line 120
    except Exception,msg:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ks/lib/pagetemplate'...
Listing './lib/python3.5/site-packages/ks/lib/schema'...
Listing './lib/python3.5/site-packages/ks/lib/scriptgetter'...
Listing './lib/python3.5/site-packages/ks/lib/textguard'...
Compiling './lib/python3.5/site-packages/ks/lib/textguard/antimat.py'...
***   File "./lib/python3.5/site-packages/ks/lib/textguard/antimat.py", line 25
    anti = re.compile(ur'(?:\b|(?<=_))(?:%s)(?:\b|(?=_))' % open(_ANTI_FILE).read().decode('utf-8'), flags=re.U | re.I)
                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ks/lib/topolsort'...
Compiling './lib/python3.5/site-packages/ks/lib/topolsort/topolsort.py'...
***   File "./lib/python3.5/site-packages/ks/lib/topolsort/topolsort.py", line 47
    raise UnknownDependency, "Unknown dependency %s of %s" % (dep, obj)
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ks/lib/treenodeklp'...
Listing './lib/python3.5/site-packages/ks/lib/treenodeklp/tests'...
Listing './lib/python3.5/site-packages/ks/lib/tstypes'...
Listing './lib/python3.5/site-packages/ks.lib-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
